# maxc

./: .gitignore  AGENTS.md  BRANCHING.md  CHANGELOG.md  CONTRIBUTION.md  Cargo.toml  PLAN.md  README.md  backend-plan.md  frontend-plan.md
.github/workflows/: backend-phase1.yml  backend.yml  tauri-release.yml
backend/: RUNBOOK.md
backend/automation/: Cargo.toml  perf-baseline-real.json  perf-baseline.json  perf-profiles-real.json  perf-profiles.json
backend/automation/src/: lib.rs  server.rs
backend/automation/tests/: rpc_compatibility.rs  rpc_contracts.rs  rpc_server.rs
backend/browser/: Cargo.toml
backend/browser/src/: lib.rs
backend/cli/: Cargo.toml
backend/cli/src/: main.rs
backend/core/: Cargo.toml
backend/core/src/: lib.rs
backend/security/: Cargo.toml
backend/security/src/: lib.rs
backend/storage/: Cargo.toml
backend/storage/src/: lib.rs
backend/telemetry/: Cargo.toml
backend/telemetry/src/: lib.rs
backend/terminal/: Cargo.toml
backend/terminal/src/: lib.rs
docs/: README.md  architecture.md  backend-overview.md  cli.md  configuration.md  development.md  frontend-integration.md  operations.md  rpc-api.md  testing.md
maxc-landing-page/: package.json
maxc-landing-page/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
maxc-landing-page/app/changelogs/: page.tsx
maxc-landing-page/app/docs/: page.tsx
maxc-landing-page/app/downloads/: page.tsx
maxc-landing-page/app/examples/: page.tsx
maxc-landing-page/app/github/: page.tsx
maxc-landing-page/components/ascii-hub/: domain-section.tsx  footer.tsx  hero-section.tsx  navigation.tsx  pseudo-terminal.tsx  tech-ticker.tsx
maxc-landing-page/components/ascii-hub/sections/: section-compiler.tsx  section-concurrency.tsx  section-graphics.tsx  section-hardware.tsx  section-kernel.tsx  section-ledger.tsx  section-logic.tsx  section-network.tsx
maxc-landing-page/components/landing/: architecture.tsx  cli-showcase.tsx  cta.tsx  features.tsx  footer.tsx  hero.tsx  mock-workspace.tsx  navbar.tsx  open-source.tsx  product.tsx  trust.tsx
maxc-landing-page/lib/: sections-data.ts
maxc-landing-page/public/: llms.txt  robots.txt
maxc-landing-page/styles/: globals.css
maxc_desktop/: components.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
maxc_desktop/src/: App.css  App.tsx
maxc_desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
maxc_desktop/src-tauri/capabilities/: default.json
maxc_desktop/src-tauri/icons/: icon.icns
maxc_desktop/src-tauri/src/: lib.rs  main.rs
maxc_desktop/src/components/: AgentPanel.tsx  BrowserView.tsx  NotificationPanel.tsx  PaneContainer.tsx  SettingsDialog.tsx  SurfaceTabBar.tsx  XtermTerminal.tsx
