[package]
name = "maxc-automation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
rand.workspace = true
maxc-core = { path = "../core" }
maxc-security = { path = "../security" }
maxc-storage = { path = "../storage" }
