[package]
name = "maxc-automation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
rand.workspace = true
maxc-core = { path = "../core" }
maxc-security = { path = "../security" }
maxc-storage = { path = "../storage" }
maxc-browser = { path = "../browser" }
maxc-telemetry = { path = "../telemetry" }
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_Pipes",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
] }
