[package]
name = "maxc_desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "maxc_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time"] }
maxc-automation = { path = "../../backend/automation" }
maxc-core = { path = "../../backend/core" }
tauri-plugin-dialog = "2.6.0"
